--- a/src/components/design/menu/menu.css
+++ b/src/components/design/menu/menu.css
@@ -3,7 +3,7 @@
     width: 100px;
 }
 #popups {
-    background-color: rgb(109, 62, 84);
+    background-color: rgb(113, 224, 141);
     padding: 50px;
     border-radius: 10px;
 }
@@ -12,7 +12,7 @@
 }
 #tableau {
     display: none;
-    background-color: #f3671f;
+    background-color: #d6c05f;
 }
 #bottou {
     font-size: 12px !important
@@ -26,7 +26,6 @@
 #footer {
     height: 80px;
     line-height: 50%;
-    position: fixed;
     width: 100%;
     font-family:Roboto 'Helvetica Neue', sans-serif !important;
 }
