--- a/src/components/design/menu/menu.css
+++ b/src/components/design/menu/menu.css
@@ -12,13 +12,13 @@
 }
 #tableau {
     display: none;
-    background-color: #d6c05f;
+    background-color: #5fd6a4;
 }
 #bottou {
     font-size: 12px !important
 }
 .md-form{
-    background-color: #f3671f;
+    background-color: #1f9ef3;
     /* padding: 10px; */
     border-radius: 10px;
     width: 500px;
@@ -32,4 +32,5 @@
 
 h2,p{
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
+    font-style: Verdana,Tahoma, Geneva;
 }
