--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -1,9 +1,9 @@
 #feedback-form {
    width: 64.5vh;
     margin: 0 auto;
-     background-color: #d05c62;
+     background-color: #5c85d0;
       padding: 2.58vh 6.45vh 5.16vh;
-       box-shadow: 0.129vh 0.516vh 1.29vh 0.129vh #aaa;
+       box-shadow: 0.129vh 0.516vh 1.29vh 0.129vh rgb(202, 182, 182);
         font-family: verdana, sans-serif; color: #eee !important;
        }
         #feedback-form * { 
