--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
   font-family:Verdana;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family:Roboto;
+  font-family:Verdana, Geneva, Tahoma, sans-serif;
   font-size: 50px;
 }
 
