--- a/src/components/design/menu/menu.css
+++ b/src/components/design/menu/menu.css
@@ -9,6 +9,9 @@
 }
 #ajoutatelier {
     display: none;
+    background:#1B2030
+    url(https://images.unsplash.com/photo-1463405346908-1e464eea5f3b?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ)
+    center no-repeat;
 }
 #tableau {
     display: none;
