--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,11 @@
     height: 50%;
 }
 #nomProject{
-    color: #f3671f;
+    color: #1f8df3;
     font-size:46px; 
 }
 .aingo{
-    color: #d05c62;
+    color: #715cd0;
     font-size:76px;
 }
 #navbar{
