--- a/src/components/design/menu/menu.css
+++ b/src/components/design/menu/menu.css
@@ -3,7 +3,8 @@
     width: 100px;
 }
 #popups {
-    background-color: rgb(113, 224, 141);
+    background-color: rgb(113, 224, 141) url(https://images.unsplash.com/photo-1463405346908-1e464eea5f3b?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ)
+    center no-repeat;
     padding: 50px;
     border-radius: 10px;
 }
