--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,12 @@ body {
   margin: 0;
   padding: 0;
   font-family:Verdana;
+  background:#1B2030 
+  url(https://images.unsplash.com/photo-1463405346908-1e464eea5f3b?ixlib=rb-1.2.1&q=85&fm=jpg&crop=entropy&cs=srgb&ixid=eyJhcHBfaWQiOjE0NTg5fQ) 
+  center no-repeat;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 50px;
 }
 
