--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,10 @@ body {
   center no-repeat;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family:Verdana, Geneva, Tahoma, sans-serif, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family:Verdana, Geneva, Tahoma, sans-serif,
+  -apple-system, BlinkMacSystemFont, 
+  'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 
+  'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 50px;
 }
 
