--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -62,3 +62,32 @@ body {
   overflow: hidden;
   font-size: 50%;
   }
+
+  .submit {
+   position: relative;
+   width: 100%;
+   height: 4rem;
+   margin: 5rem 0 2.2rem;
+   color: rgba(255,255,255,0.8);
+   background: #FF3366;
+   font-size: 1.5rem;
+   border-radius: 3rem;
+   cursor: pointer;
+   overflow: hidden;
+   transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
+     content: "";
+     position: absolute;
+     top: 50%;
+     left: 50%;
+     margin-left: -1.5rem;
+     margin-top: -1.5rem;
+     width: 3rem;
+     height: 3rem;
+     border: 2px dotted #fff;
+     border-radius: 50%;
+     border-left: none;
+     border-bottom: none;
+     transition: opacity 0.1s 0.4s;
+     opacity: 0;
+   
+}
