--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -63,7 +63,7 @@ body {
   font-size: 50%;
   }
 
-  .submit {
+  .sud {
    position: relative;
    width: 100%;
    height: 4rem;
@@ -75,7 +75,7 @@ body {
    cursor: pointer;
    overflow: hidden;
    transition: width 0.3s 0.15s, font-size 0.1s 0.15s;
-     content: "";
+     /* content: "";
      position: absolute;
      top: 50%;
      left: 50%;
@@ -88,6 +88,6 @@ body {
      border-left: none;
      border-bottom: none;
      transition: opacity 0.1s 0.4s;
-     opacity: 0;
+     opacity: 0; */
    
 }
