--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,9 @@ h1,h2,h3,h4,h5,h6{
   'Open Sans', 'Helvetica Neue', sans-serif;
   font-size: 50px;
 }
+header{
+  background-color: #1B2030;
+}
 
 
 
