--- a/src/components/design/menu/menu.css
+++ b/src/components/design/menu/menu.css
@@ -25,7 +25,7 @@
     width: 500px;
 }
 #footer {
-    background-color: #1B2030;
+    background-color: rgb(11, 23, 63);
     height: 80px;
     position: flex;
     line-height: 50%;
@@ -36,4 +36,7 @@
 h2,p{
     font-family: Verdana, Geneva, Tahoma, sans-serif !important;
     font-style: Verdana,Tahoma, Geneva !important;
+}
+#navbar{
+    background-color: rgb(21, 33, 70);
 }
