--- a/src/components/dashboard/dash.css
+++ b/src/components/dashboard/dash.css
@@ -1,7 +1,7 @@
 .gauche{
     padding-left: 12px;
     background:#1B2030
-    url(https://http://www.metiers-du-livre.fr/wp-content/uploads/2017/11/M2-metiers-du-livre-auteur-ecrivain.png) 
+    url(http://www.metiers-du-livre.fr/wp-content/uploads/2017/11/M2-metiers-du-livre-auteur-ecrivain.png) 
     center no-repeat;
 
 }
