--- a/src/components/newLivres/new.css
+++ b/src/components/newLivres/new.css
@@ -1,5 +1,5 @@
 #livres{
     background:#1B2030
-    url(https://www.google.com/url?sa=i&source=images&cd=&ved=2ahUKEwi__tSrq6nkAhUB_aQKHXg1BqQQjRx6BAgBEAQ&url=http%3A%2F%2Fwww.tourisme-quillebeuf.com%2Fevenement%2Fatelier-ecriture-a-hauville%2F&psig=AOvVaw32bnRcQe-dDtMXmOwYrtek&ust=1567210594345664);
+    url(https://www.google.com/M2-metiers-du-livre-auteur-ecrivain.png);
     width: 40%;
 }
